Structure with example folders

--- a/examples/basic/Makefile
+++ b/examples/basic/Makefile
@@ -11,22 +11,13 @@ CFLAGS := -DJETSON=1 -march=armv8-a -O3 -fPIC
 LIBRARIES := -ljpeg
 endif
 
-ifdef USE_KINECT
-CFLAGS += -DUSE_KINECT=1
-K4A_INC_DIR = /usr/local/kinect/include
-K4A_LIB_DIR = /usr/lib/$(ARCH)-gnu
-endif
-
 GL_INC_DIR = /usr/include/GL
 GL_LIB_DIR = /usr/lib/$(ARCH)-gnu
 CUDA_INC_DIR = /usr/local/cuda-11.0/include
 CUDA_LIB_DIR = /usr/local/cuda-11.0/lib64
 
-SRC_DIR = .
-INC_DIR = .
-BIN_DIR = .
 OBJ_DIR = obj
-BIN_PATH = $(BIN_DIR)/$(TARGET)
+BIN_PATH = ./$(TARGET)
 
 PKGCFG	= pkg-config
 MKDIR	= mkdir
@@ -37,11 +28,7 @@ NVCC	= nvcc -ccbin $(CXX)
 MAKE	= make
 CP	= cp
 
-IFLAGS = -I$(CUDA_INC_DIR) -I$(GL_INC_DIR) -I$(INC_DIR)
-
-ifdef USE_KINECT
-IFLAGS += -I$(K4A_INC_DIR)	
-endif
+IFLAGS = -I$(CUDA_INC_DIR) -I$(GL_INC_DIR) -I. -I../..
 
 WFLAGS = -Wall -Wextra -Werror=float-equal -Wuninitialized -Wunused-variable #-Wdouble-promotion
 CFLAGS += $(WFLAGS)
@@ -50,10 +37,6 @@ NVCCFLAGS = -m64 $(addprefix -Xcompiler ,$(CFLAGS)) $(IFLAGS)
 LDFLAGS = -rpath='$$ORIGIN'
 LIBRARIES += -L$(BIN_DIR) -L$(CUDA_LIB_DIR) -L$(GL_LIB_DIR) -lGL -lX11 -lEGL -lGLU -lpthread -lz -lcudart -lcudnn -lcublas -lnvinfer -lnvparsers -lnvinfer_plugin -lnvonnxparser -lnvrtc -llz4
 
-ifdef USE_KINECT
-LIBRARIES += -L$(K4A_LIB_DIR) -lk4a 
-endif
-
 NVLDFLAGS = -m64 $(addprefix -Xcompiler ,$(CFLAGS)) $(addprefix -Xlinker ,$(LDFLAGS)) $(LIBRARIES)
 GENCODE_FLAGS =
 SMS = 53 61 70 72 75
@@ -61,22 +44,21 @@ $(foreach sm,$(SMS),$(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_
 HIGHEST_SM := $(lastword $(sort $(SMS)))
 GENCODE_FLAGS += -gencode arch=compute_$(HIGHEST_SM),code=compute_$(HIGHEST_SM)
 
-SOURCES  := $(wildcard $(SRC_DIR)/*.c*)
-INCLUDES := $(wildcard $(INC_DIR)/*.h) $(wildcard $(SRC_DIR)/*.h)
-OBJECTS  := $(patsubst $(SRC_DIR)/%.cpp, $(OBJ_DIR)/%.o, $(patsubst $(SRC_DIR)/%.cu, $(OBJ_DIR)/%.o, $(SOURCES)))
+SOURCES  := $(wildcard ./*.c*) $(wildcard ../../*.c*)
+INCLUDES := $(wildcard ./*.h ) $(wildcard ../../*.h )
+OBJECTS  := $(patsubst ./%.cpp, $(OBJ_DIR)/%.o, $(patsubst ../../%.cpp, $(OBJ_DIR)/%.o, $(patsubst ./%.cu, $(OBJ_DIR)/%.o, $(patsubst ../../%.cu, $(OBJ_DIR)/%.o, $(SOURCES)))))
+
 
 all: $(BIN_PATH)
 
-$(BIN_DIR)/libdepthengine.so: $(BIN_DIR)
-	$(CP) $(K4A_LIB_DIR)/libdepthengine.so $(BIN_DIR)/
-
-$(BIN_DIR)/libk4a.so: $(BIN_DIR)
-	$(CP) $(K4A_LIB_DIR)/libk4a.so.1.4 $(BIN_DIR)/libk4a.so
-
-$(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp $(INCLUDES) $(OBJ_DIR)
+$(OBJ_DIR)/%.o : ./%.cpp $(INCLUDES) $(OBJ_DIR)
+	$(NVCC) -c $(NVCCFLAGS) $< -o $@
+$(OBJ_DIR)/%.o : ../../%.cpp $(INCLUDES) $(OBJ_DIR)
 	$(NVCC) -c $(NVCCFLAGS) $< -o $@
 
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cu $(INCLUDES) $(OBJ_DIR)
+$(OBJ_DIR)/%.o: ./%.cu $(INCLUDES) $(OBJ_DIR)
+	$(NVCC) -c $(NVCCFLAGS) $< -o $@
+$(OBJ_DIR)/%.o: ../../%.cu $(INCLUDES) $(OBJ_DIR)
 	$(NVCC) -c $(NVCCFLAGS) $< -o $@
 
 $(BIN_PATH): $(OBJECTS) $(BIN_DIR)
