Added transceiver to communicate between nodes

--- a/examples/kinect/global.config
+++ b/examples/kinect/global.config
@@ -1,3 +1,15 @@
+# Running as controller
+IsController no
+
+# Name of the node
+NodeName node
+
+# Multicast address
+MulticastAddress 239.200.200.200
+
+# Multicast port
+MulticastPort 6000
+
 # Kinect frames per second
 KinectFramesPerSecond 15
 
