removed inference because of linking issues. Will resolve later

--- a/examples/kinect/Makefile
+++ b/examples/kinect/Makefile
@@ -37,7 +37,7 @@ CFLAGS += $(WFLAGS)
 NVCCFLAGS = -m64 $(addprefix -Xcompiler ,$(CFLAGS)) $(IFLAGS)
 
 LDFLAGS = -rpath='$$ORIGIN'
-LIBRARIES += -L$(BIN_DIR) -L$(CUDA_LIB_DIR) -L$(GL_LIB_DIR) -lGL -lX11 -lEGL -lGLU -lpthread -lz -lcudart -lcudnn -lcublas -lnvinfer -lnvparsers -lnvinfer_plugin -lnvonnxparser -lnvrtc -llz4 -L$(K4A_LIB_DIR) -lk4a 
+LIBRARIES += -L$(BIN_DIR) -L$(CUDA_LIB_DIR) -L$(GL_LIB_DIR) -lGL -lX11 -lEGL -lGLU -lpthread -lz -llz4 -L$(K4A_LIB_DIR) -lk4a 
 
 NVLDFLAGS = -m64 $(addprefix -Xcompiler ,$(CFLAGS)) $(addprefix -Xlinker ,$(LDFLAGS)) $(LIBRARIES)
 GENCODE_FLAGS =
