--- a/examples/webcam/defaults.config
+++ b/examples/webcam/defaults.config
@@ -11,3 +11,8 @@ WebcamHeight 480
 # Does not actually have any effect at this time
 WebcamFramesPerSecond 15
 
+# Window Width
+Width 1280
+
+# Window Height
+Height 960
