Kinect update and jpeg encode started

--- a/examples/kinect/defaults.config
+++ b/examples/kinect/defaults.config
@@ -1,20 +1,47 @@
+# Display Size
+Display.Width 1920
+Display.Height 1080
+
 # Kinect frames per second
-KinectFramesPerSecond 15
+Kinect.Acquisition.FrameRate 30
 
-# Kinect vertical resolution, one of [720, 1080, 1440, 1536, 2160, 3072]
-KinectColorResolution 720
+# Kinect color resolution, one of [1280x720, 1920x1080, 2560x1440, 2048x1536, 3840x2160, 4096x3072]
+Kinect.Acquisition.Color.Width 1920
+Kinect.Acquisition.Color.Height 1080
+Kinect.Acquisition.Color.Transform no
 
-# Kinect depth mode binned
-KinectDepthModeBinned no
+# Kinect depth resolution, one of [320x288, 640x576, 512x512, 1024x1024]
+Kinect.Acquisition.Depth.Width 640
+Kinect.Acquisition.Depth.Height 576
+Kinect.Acquisition.Depth.Transform yes
+Kinect.Acquisition.Depth.Compress yes
 
-# Kinect depth mode narrow field of view
-KinectDepthModeNFOV yes
+# Kinect exposure
+Kinect.ColorControl.Exposure 4000
 
-# Kinect transform depth to color
-KinectDepthToColor yes
+# Kinect Brightness 0 - 255 (default 128)
+Kinect.ColorControl.Brightness 128
 
-# Kinect depth should be compressed
-KinectDepthCompress yes
+# Kinect Sharpness 0-4 (default 0)
+Kinect.ColorControl.Sharpness 1
+
+#Kinect Saturation 0 - 63 (default 32)
+Kinect.ColorControl.Saturation 48
+
+# Kinect White Balance in Kelvin (steps of 10)
+Kinect.ColorControl.Whitebalance -1
+
+# Kinect Gain 0-255 (default 128)
+Kinect.ColorControl.Gain 0
+
+# Kinect Contrast 0 - 10 (default 5)
+Kinect.ColorControl.Contrast 5
+
+# Kinect Backlight Compensation (0 = off, 1 = on)
+Kinect.ColorControl.BacklightCompensation 1
+
+# Kinect Powerline Frequency (1 = 50hz, 2=60hz)
+Kinect.ColorControl.PowerlineFrequency 1
 
 # Output directory for the color and depth stream
 OutputDirectory .
