--- a/examples/kinect/local.config
+++ b/examples/kinect/local.config
@@ -1,8 +1,2 @@
 # Overwrite node name
-NodeName afx-dev-1
-
-# Less FPS
-KinectFramesPerSecond 5
-
-# Send to NFS
-OutputDirectory /mnt/ram/icu0
+NodeName Wipkat
